fix: resolve sonar violations and update unit tests for security context changes